Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 13.0.0
-
None
-
-
15446c9e3 (13.0)
Description
When testing software on multiple Android devices by physically un- / re-plugging them to the USB, QtCreator often (not always) crashes. This is did happen with older versions of Creator as well.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-30770 QtCreator Crashes on android ADB reconnection
-
- Closed
-
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTCREATORBUG-30645 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
561485,4 | Android: Don't crash when dis- and reconnecting phone via USB | 13.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |